# gandalf-lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: CMakeLists.txt  README.md
examples/headless/: CMakeLists.txt
examples/headless/src/: main.cpp
examples/sdl/: CMakeLists.txt  README.md
examples/sdl/src/: audio_handler.cpp  audio_handler.h  main.cpp
include/gandalf/: apu.h  cartridge.h  constants.h  cpu.h  cpu_registers.h  dma.h  gameboy.h  hdma.h  hram.h  io.h  joypad.h  lcd.h  mbc.h  ppu.h  serial.h  serializable.h  serialization.h  snapshotable.h  timer.h  wram.h
include/gandalf/sound/: frame_sequencer.h  sound_channel.h
src/: apu.cpp  cartridge.cpp  cpu.cpp  dma.cpp  gameboy.cpp  hdma.cpp  hram.cpp  io.cpp  joypad.cpp  lcd.cpp  ppu.cpp  serial.cpp  timer.cpp  wram.cpp
src/cartridge/: mbc.cpp  mbc1.cpp  mbc1.h  mbc3.cpp  mbc3.h  mbc5.cpp  mbc5.h  rom_only.cpp
src/sound/: frame_sequencer.cpp  frequency_sweep_unit.cpp  frequency_sweep_unit.h  length_counter.cpp  length_counter.h  noise_channel.cpp  noise_channel.h  sound_channel.cpp  square_wave_channel.cpp  square_wave_channel.h  volume_envelope.cpp  volume_envelope.h  wave_channel.cpp  wave_channel.h
tests/: CMakeLists.txt
tests/src/: blargg_test.cpp  cartridge_test.cpp  mooneye_test.cpp  ppu_test.cpp  serial_test.cpp  serialization_test.cpp  timer_test.cpp  wram_test.cpp
